Enhance theme management and UI components: update theme initialization, add smooth scrolling for login/signup cards, and refine HeroScrollDemo structure

--- a/SyntaxSpace/index.html
+++ b/SyntaxSpace/index.html
@@ -1,10 +1,20 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Syntax Space</title>
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        const theme = localStorage.getItem("theme") || "dark";
+        if (theme === "dark") {
+          document.documentElement.classList.add("dark");
+        } else {
+          document.documentElement.classList.remove("dark");
+        }
+      });
+    </script>
   </head>
   <body>
     <div id="root" class="bg-background h-screen w-full" ></div>
